src/index.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;500;600;700;800&family=Raleway:wght@400;500;600;700&display=swap');

@layer govbr, theme, base, components, utilities;

@import "@govbr-ds/core/dist/core.min.css" layer(govbr);
@import "tailwindcss/theme.css" layer(theme);
@import "tailwindcss/utilities.css" layer(utilities);

@theme {
  --font-sans: "Raleway", ui-sans-serif, system-ui, sans-serif;
  --font-display: "Libre Franklin", sans-serif;

  --color-primary: #1351b4;
  --color-primary-dark: #0c326f;
  
  --color-secondary: #006d35;
  --color-on-secondary: #ffffff;
  --color-secondary-container: #89f6a5;
  --color-on-secondary-container: #007238;
  
  --color-background: #f9f9f9;
  --color-on-background: #1a1c1c;
  --color-surface: #ffffff;
  --color-on-surface: #1a1c1c;
  --color-on-surface-variant: #424750;
  
  --color-state-novo: #008844;
  --color-state-bom: #168821;
  --color-state-regular: #FFCC00;
  --color-state-pessimo: #D93B3B;
  --color-state-sucata: #737373;
}

body {
  background-color: var(--color-background);
  color: var(--color-on-background);
  font-family: var(--font-sans);
}

.font-display {
  font-family: var(--font-display);
}

